--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "proyecto-backend-js",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "start": "node .",
     "dev": "nodemon"
@@ -15,7 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   }
 }
