--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Daniel Ochoa",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
@@ -23,6 +24,9 @@
     "mongoose": "^8.0.0",
     "mongoose-paginate-v2": "^1.7.4",
     "nodemon": "^3.0.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   }
