--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGODB_URI="mongodb+srv://developer:TQkVFbfZdesDfCmu@cluster0.1dtp5rb.mongodb.n
 JWT_SECRET="secret"
 COOKIE_SECRET="secret"
 PERSISTENCE="mongodb"
+NODE_ENV="production"
