Tercera práctica integradora

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,12 @@
 PORT="8080"
 MONGODB_URI="mongodb+srv://developer:TQkVFbfZdesDfCmu@cluster0.1dtp5rb.mongodb.net/ecommerce?retryWrites=true&w=majority"
-JWT_SECRET="secret"
+JWT_SECRET=":9p.6b;kux)w4V7/]flg79#}35mG9Z"
+JWT_SECRET_RECOVERY="Bs|q06:]o7XKw>_l]E£p^8[>2A4D*(Bl"
 COOKIE_SECRET="secret"
 PERSISTENCE="mongodb"
 NODE_ENV="production"
+EMAIL_USER="ing.danielochoa77@gmail.com"
+EMAIL_PASSWORD="qovzxfodwddfzzmr"
+EMAIL_SERVICE="gmail"
+EMAIL_PORT="25"
+NODE_TLS_REJECT_UNAUTHORIZED=0
