--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@faker-js/faker": "^8.4.0",
+    "artillery": "^2.0.5",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "mongoose-paginate-v2": "^1.7.4",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
