--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ JWT_SECRET_RECOVERY="Bs|q06:]o7XKw>_l]E£p^8[>2A4D*(Bl"
 COOKIE_SECRET="secret"
 PERSISTENCE="mongodb"
 NODE_ENV="production"
-EMAIL_USER="ing.danielochoa77@gmail.com"
-EMAIL_PASSWORD="qovzxfodwddfzzmr"
+EMAIL_USER="cursosdanielochoa@gmail.com"
+EMAIL_PASSWORD="dojitabmrfylwxzn"
 EMAIL_SERVICE="gmail"
 EMAIL_PORT="25"
 NODE_TLS_REJECT_UNAUTHORIZED=0
